--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,75 @@
-<%= form_with(model: article, local: true) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+<% if @article.errors.any? %>
 
-      <ul>
-      <% article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<h2>The following errors prevented the article from getting created</h2>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+<ul>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+<% @article.errors.full_messages.each do |msg| %>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<li><%= msg %></li>
+
 <% end %>
+
+</ul>
+
+<% end %>
+
+<div class='row'>
+
+<div class='col-xs-12'>
+
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+
+<div class="form-group">
+
+<div class="control-label col-sm-2">
+
+<%= f.label :title %>
+
+</div>
+
+<div class="col-sm-8">
+
+<%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+
+</div>
+
+</div>
+
+<div class="form-group">
+
+<div class="control-label col-sm-2">
+
+<%= f.label :description %>
+
+</div>
+
+<div class="col-sm-8">
+
+<%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+
+</div>
+
+</div>
+
+<div class="form-group">
+
+<div class="col-sm-offset-2 col-sm-10">
+
+<%= f.submit class: 'btn btn-primary btn-lg' %>
+
+</div>
+
+</div>
+
+<% end %>
+
+<div class="col-xs-4 col-xs-offset-4">
+
+[ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+
+</div>
+
+</div>
+
+</div>
