--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,6 +22,16 @@
 
 </div>
 
+  <div class="article-meta-details">
+
+    <small>Created by: <%= article.user.username if article.user%>,
+
+      <%= time_ago_in_words(article.created_at) %> ago,
+
+      last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
+
+  </div>
+
 <div class="article-actions">
 
 <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
@@ -31,6 +41,7 @@
 data: { confirm: "Are you sure you want to delete the article?"},
 
 class: "btn btn-xs btn-danger" %>
+
 
 </div>
 
