--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,6 @@
 
 <div align="center">
 
-  <%= will_paginate %>
 
   <% @users.each do |user| %>
 
@@ -21,6 +20,14 @@
           </li>
 
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+
+          <% if logged_in? and current_user.admin? %>
+
+            <li><%= link_to "Delete this user", user_path(user), method: :delete,
+
+                            data: { confirm: "Are you sure you want to delete the user and all their articles?" } %></li>
+
+          <% end %>
 
         </div>
 
